add end-to-end portion of "Hello, World!"

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,8 @@ matrix:
     - language: ruby
       env: NAME=RAILS
       rvm: 2.5.0
-      cache: bundler
       services: postgresql
+      cache: bundler
       before_script:
         - bundle exec rake db:create db:migrate
       script:
@@ -25,8 +25,24 @@ matrix:
       node_js: lts/*
       cache:
         directories:
-          - node_modules
-          - packages/create-react-app/node_modules
-          - packages/react-scripts/node_modules
+          - client/node_modules
+          - client/packages/create-react-app/node_modules
+          - client/packages/react-scripts/node_modules
       before_install:
         - cd client
+    - language: node_js
+      env: NAME=CYPRESS
+      node_js: lts/*
+      services: postgresql
+      cache:
+        bundler: true
+        directories:
+          - node_modules
+          - client/node_modules
+          - client/packages/create-react-app/node_modules
+          - client/packages/react-scripts/node_modules
+      before_script:
+        - bundle exec rake db:create db:migrate
+        - rake start &
+        - wait-on http://localhost:3000
+        - wait-on http://localhost:3001/api/v1/ping
