--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "okexchange-client",
   "version": "0.1.0",
+  "license": "UNLICENSED",
   "private": true,
   "proxy": {
     "/api": {
