--- a/.travis.yml
+++ b/.travis.yml
@@ -3,31 +3,38 @@ notifications:
 matrix:
   include:
 
-    - language: ruby
-      env: NAME=RAILS
+    - env: NAME=API
+      language: ruby
       rvm: 2.5.0
       services: postgresql
-      cache: bundler
       before_script:
         - bundle exec rake db:create db:migrate
       script:
         - bundle exec rspec
+      cache: bundler
 
-    - language: node_js
-      env: NAME=REACT
+    - env: NAME=CLIENT
+      language: node_js
       node_js: lts/*
+      before_install:
+        - cd client
       cache:
         directories:
           - client/node_modules
           - client/packages/create-react-app/node_modules
           - client/packages/react-scripts/node_modules
-      before_install:
-        - cd client
 
-    - language: node_js
-      env: NAME=CYPRESS
+    - env: NAME=PRODUCTION
+      language: node_js
       node_js: lts/*
       services: postgresql
+      install:
+        - yarn && bundle
+      before_script:
+        - bundle exec rake db:create db:migrate
+        - yarn build
+        - rails s &
+        - wait-on http://localhost:3000
       cache:
         bundler: true
         directories:
@@ -35,8 +42,3 @@ matrix:
           - client/node_modules
           - client/packages/create-react-app/node_modules
           - client/packages/react-scripts/node_modules
-      before_script:
-        - bundle exec rake db:create db:migrate
-        - rake start &
-        - wait-on http://localhost:3000
-        - wait-on http://localhost:3001/api/v1/ping
