--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,9 @@
     "eject": "react-scripts dont_do_this_by_accident eject"
   },
   "dependencies": {
+    "material-ui": "^0.20.0",
+    "prop-types": "^15.6.0",
     "react": "^16.2.0",
-    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
