--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ matrix:
         - bundle exec rake db:create db:migrate
         - yarn build
         - rails s &
-        - wait-on http://localhost:3000
+        - wait-on http://localhost:3000/api/v1/ping
       cache:
         bundler: true
         directories:
