--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,12 @@
     "eject": "react-scripts dont_do_this_by_accident eject"
   },
   "dependencies": {
-    "material-ui": "^0.20.0",
+    "material-ui": "^1.0.0-beta.34",
+    "material-ui-icons": "^1.0.0-beta.17",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-google-login": "^2.8.7",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0"
