--- a/client/.eslintrc.yml
+++ b/client/.eslintrc.yml
@@ -11,24 +11,40 @@
     - plugin:react/recommended
     - airbnb
   rules:
-    react/prop-types:
+
+    # personal preference
+    space-before-function-paren:
       - error
+      - never
+
+    # for react-router
+    react/prop-types:
+      - warn #TEMP
       - ignore:
         - children
         - location
         - history
         - match
+
+    # https://github.com/facebook/create-react-app/issues/87#issuecomment-234627904
     react/jsx-filename-extension:
       - error
       - extensions:
         - .js
+
+    # for react-router
     jsx-a11y/anchor-is-valid:
       - error
       - specialLink:
         - to
-    space-before-function-paren:
-      - error
-      - never
+
+    # sometimes it's really optional
+    react/require-default-props:
+      - off
+
+    # slow to conform in early development
+    react/prefer-stateless-function:
+      - warn #TEMP
 
   overrides:
     - files:
