--- a/client/.eslintrc.yml
+++ b/client/.eslintrc.yml
@@ -44,7 +44,7 @@
 
     # slow to conform in early development
     react/prefer-stateless-function:
-      - warn #TEMP
+      - off #TEMP
 
   overrides:
     - files:
