--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -3,13 +3,12 @@
   "name": "OKX",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "src": "favicon.png",
       "type": "image/x-icon"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#ffbbd0",
+  "theme_color": "#ffaadd",
   "background_color": "#000000"
 }
