--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,8 @@
     "react-google-login": "^2.8.7",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.0"
+    "react-scripts": "1.1.0",
+    "react-twitter-widgets": "^1.7.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
