--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,8 @@ matrix:
       language: ruby
       rvm: 2.5.0
       services: postgresql
-      before_script:
-        - bundle exec rake db:create db:migrate
-      script:
-        - bundle exec rspec
       cache: bundler
+      before_script: rake db:setup
 
     - env: NAME=CLIENT
       language: node_js
@@ -29,10 +26,10 @@ matrix:
       node_js: lts/*
       services: postgresql
       install:
-        - yarn && bundle
+        - yarn && bundle # root yarn installs cypress and wait-on
       before_script:
-        - bundle exec rake db:create db:migrate
         - yarn build
+        - rake db:setup
         - rails s &
         - wait-on http://localhost:3000
       cache:
