--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
   "license": "UNLICENSED",
   "private": true,
   "scripts": {
-    "test": "$(npm bin)/cypress run --record",
-    "test:client": "cd client && yarn test",
-    "build": "yarn unbuild && cd client && yarn && yarn build && mv build ../public",
-    "unbuild": "rm -rf public",
-    "heroku-postbuild": "yarn build && rm -rf node_modules client/node_modules",
-    "install:all": "bundle && yarn && cd client && yarn"
+    "setup": "bundle && rake db:setup && cd client && yarn",
+    "build": "yarn clobber && cd client && yarn && yarn build && mv build ../public",
+    "clobber": "rm -rf public",
+    "test": "$(npm bin)/cypress run --record"
   },
   "devDependencies": {
     "cypress": "^2.0.2",
