--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "license": "UNLICENSED",
   "private": true,
   "scripts": {
+    "start": "foreman start -p 3000 --procfile DevProcfile",
+    "e2e": "foreman start -p 3000 --procfile TestProcfile",
     "setup": "bundle && rake db:setup && cd client && yarn",
     "build": "yarn clobber && cd client && yarn && yarn build && mv build ../public",
     "clobber": "rm -rf public",
