--- a/.travis.yml
+++ b/.travis.yml
@@ -3,23 +3,23 @@ notifications:
 matrix:
   include:
 
-    - env: NAME=API
-      language: ruby
-      rvm: 2.5.0
-      services: postgresql
-      cache: bundler
-      before_script: rake db:setup
-
-    - env: NAME=CLIENT
-      language: node_js
-      node_js: lts/*
-      before_install:
-        - cd client
-      cache:
-        directories:
-          - client/node_modules
-          - client/packages/create-react-app/node_modules
-          - client/packages/react-scripts/node_modules
+    # - env: NAME=API
+    #   language: ruby
+    #   rvm: 2.5.0
+    #   services: postgresql
+    #   cache: bundler
+    #   before_script: rake db:setup
+    #
+    # - env: NAME=CLIENT
+    #   language: node_js
+    #   node_js: lts/*
+    #   before_install:
+    #     - cd client
+    #   cache:
+    #     directories:
+    #       - client/node_modules
+    #       - client/packages/create-react-app/node_modules
+    #       - client/packages/react-scripts/node_modules
 
     - env: NAME=PRODUCTION
       language: node_js
